completed contact-page html

--- a/src/main/resources/css/html/contact-page.html
+++ b/src/main/resources/css/html/contact-page.html
@@ -7,3 +7,21 @@
     <title>Contact Page</title>
 </head>
 <body>
+<div class="contact-container">
+    <header>
+        <h1>Contacts</h1>
+    </header>
+    <ul class="contact-list">
+        <li class="contact-item">
+            <img src="profile-pic.jpg" alt="Contact Name" class="contact-avatar">
+            <div class="contact-info">
+                <h2>Contact Name</h2>
+                <p class="status">Online</p>
+            </div>
+        </li>
+        <!-- Repeat contact items -->
+    </ul>
+</div>
+<script src="script.js"></script>
+</body>
+</html>
