contact-page done

--- a/src/main/resources/Contact_page/css/html/contact-page.html
+++ b/src/main/resources/Contact_page/css/html/contact-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Contact Page</title>
 </head>
 <body>
@@ -22,6 +22,6 @@
         <!-- Repeat contact items -->
     </ul>
 </div>
-<script src="script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
