--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Chat App</title>
+    <title>Welcome to Chat App</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
+
 <body>
-<div class="chat-container">
-    <div class="chat-window" id="chatWindow"></div>
-    <div class="input-container">
-        <input type="text" id="messageInput" placeholder="Type your message..." />
-        <button onclick="sendMessage()">Send</button>
-    </div>
+<div class="welcome-container">
+    <h1>Welcome to the CJC Chat App</h1>
+    <p>Click the button below to start chatting.</p>
+    <a href="chat.html">
+        <button>Go to Chat</button>
+    </a>
 </div>
-<script src="app.js"></script>
 </body>
 </html>
